# zoom_video_sdk_flutter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
docs/: DART_API_DESIGN.md  ZOOM_SDK_REFERENCE.md
docs/macos-sdk-api/: ZMVideoSDK-API.md  ZMVideoSDKAudioHelper-API.md  ZMVideoSDKAudioSettingHelper-API.md  ZMVideoSDKChatHelper-API.md  ZMVideoSDKChatMessage-API.md  ZMVideoSDKDef-API.md  ZMVideoSDKDelegate-API.md  ZMVideoSDKPasswordHandler-API.md  ZMVideoSDKRecordingHelper-API.md  ZMVideoSDKSession-API.md  ZMVideoSDKShareHelper-API.md  ZMVideoSDKUserHelper-API.md  ZMVideoSDKVideoHelper-API.md  ZMVideoSDKVideoSettingHelper-API.md
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: event_formatter.dart  event_log.dart  main.dart  (+4 more)
ios/: zoom_video_sdk_flutter.podspec
lib/: compat.dart  zoom_video_sdk_flutter.dart  zoom_video_sdk_flutter_method_channel.dart  zoom_video_sdk_flutter_platform_interface.dart  zoom_video_sdk_flutter_web.dart
macos/: zoom_video_sdk_flutter.podspec
test/: compat_test.dart  zoom_video_sdk_flutter_method_channel_test.dart  zoom_video_sdk_flutter_test.dart
windows/: CMakeLists.txt  zoom_event_stream_handler.cpp  zoom_event_stream_handler.h  zoom_serializer.h  zoom_video_sdk_flutter_plugin.cpp  zoom_video_sdk_flutter_plugin.h  zoom_video_sdk_flutter_plugin_c_api.cpp  zoom_video_texture_renderer.cpp  zoom_video_texture_renderer.h
windows/include/zoom_video_sdk_flutter/: zoom_video_sdk_flutter_plugin_c_api.h
windows/test/: zoom_video_sdk_flutter_plugin_test.cpp
windows/zoom_sdk/include/: zoom_sdk_raw_data_def.h  zoom_video_sdk_api.h  zoom_video_sdk_chat_message_interface.h  zoom_video_sdk_cloud_record_handler_interface.h  zoom_video_sdk_def.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_interface.h  zoom_video_sdk_password_handler_interface.h  zoom_video_sdk_platform.h  zoom_video_sdk_session_info_interface.h  zoom_video_sdk_vector_interface.h
windows/zoom_sdk/include/helpers/: zoom_video_sdk_annotation_helper_interface.h  zoom_video_sdk_audio_helper_interface.h  zoom_video_sdk_audio_send_rawdata_interface.h  zoom_video_sdk_audio_setting_interface.h  zoom_video_sdk_broadcast_streaming_controller_interface.h  zoom_video_sdk_broadcast_streaming_viewer_interface.h  zoom_video_sdk_chat_helper_interface.h  zoom_video_sdk_cmd_channel_interface.h  zoom_video_sdk_crc_helper_interface.h  zoom_video_sdk_livestream_helper_interface.h  zoom_video_sdk_livetranscription_helper_interface.h  zoom_video_sdk_network_connection_helper_interface.h  zoom_video_sdk_phone_helper_interface.h  zoom_video_sdk_recording_helper_interface.h  zoom_video_sdk_rtms_helper_interface.h  zoom_video_sdk_share_helper_interface.h  zoom_video_sdk_share_setting_interface.h  zoom_video_sdk_subsession_interface.h  zoom_video_sdk_user_helper_interface.h  zoom_video_sdk_video_helper_interface.h  zoom_video_sdk_video_setting_interface.h  zoom_video_sdk_video_source_helper_interface.h  zoom_video_sdk_whiteboard_helper_interface.h
windows/zoom_sdk/lib/: videosdk.lib
(+35 files in other folders)
